--- a/index.html
+++ b/index.html
@@ -120,19 +120,12 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Fill out the information below so we can get to know eachother.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
+									<h3>Projects</h3>
+									<p>Some projects i have worked on</p>
+									<a href="https://codepen.io/Bphilipson1/pen/PgyGPj"><button>Semantic HTML Challenge</button></a><br>
+									<br><a href="https://codepen.io/Bphilipson1/pen/bJmVgw"><button>Sweet Eats Bakery</button></a><br>
+									<br><a href="https://codepen.io/Bphilipson1/pen/ZZjzze"><button>Inheritance & Specificty Challenge</button></a>
+
 											</div>
 										</div>
 									</form>
